# mobilkit

./: .gitignore  .readthedocs.yaml  LICENSE  Pipfile  README.md  buildspec.yml  paper.bib  paper.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish_pypi.yml
data/: POI_shelters.csv
data/Beijing/: voronoi_points_beijing.dbf  voronoi_points_beijing.shp  voronoi_points_beijing.shx
data/Beijing/DT19new/: PopCensus2010_township.sbn  PopCensus2010_township.sbx  PopCensus2010_township.shp  PopCensus2010_township.shp.xml  PopCensus2010_township.shx
data/sample_shape/: mexico_selection_epicentre.dbf  mexico_selection_epicentre.shx
data/spatial/boundaries_shapefiles/mex_admbnda_adm1_govmex/: mex_admbnda_adm1_govmex.dbf  mex_admbnda_adm1_govmex.sbn  mex_admbnda_adm1_govmex.sbx  (+2 more)
data/spatial/seismicdata/: municipio_si.csv  pga.shp.xml  pga.shx  pgv.dbf  pgv.shp.xml  pgv.shx  psa0p3.dbf  psa0p3.shp.xml  psa0p3.shx  psa1p0.dbf  psa1p0.shp.xml  psa1p0.shx  psa3p0.dbf  psa3p0.shp  psa3p0.shp.xml  psa3p0.shx
docs/: README.md  conf.py  index.rst  mobilkit.rst  modules.rst  requirements.txt
docs/_static/: README.md
docs/examples/: M4R_01_Dataloading_cleaning_validating.ipynb  M4R_02_DisplacementAnalysis.ipynb  M4R_03_POI_visit_analysis.ipynb  M4R_04_Population_Density_Analysis.ipynb  mobilkit_tutorial.ipynb
docs/reference/: Loading_data.rst
examples/: 01_mobilkit_example.ipynb  02_mobilkit_population_per_area.ipynb  03_mobilkit_displacement.ipynb  04_skmob_communication.ipynb
mobilkit/: __init__.py  dask_schemas.py  displacement.py  loader.py  spatial.py  stats.py  temporal.py  tools.py  viz.py
(+17 files in other folders)
