
[metadata]
name = mobilkit
version = 0.2.8
author = MindEarth
author_email = enrico.ubaldi@mindearth.org
description = A Python Toolkit for Urban Resilience and Disaster Risk Management Analytics using High Frequency Human Mobility Data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mindearth/mobilkit
project_urls =
    Bug Tracker = https://github.com/mindearth/mobilkit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
packages = mobilkit
python_requires = >=3.6
install_requires =
	distributed[full]==2023.5.0
	dask[full]==2023.5.0
	click
	geopandas
	descartes
	rtree
	Fiona
	geojson
	haversine
	joblib
	matplotlib
	pyarrow
	scikit-learn
	scipy
	seaborn
	statsmodels
	requests
[options.extras_require]
complete =
	%(doc)s
	%(viz)s
	%(skmob)s
	%(locations)s
viz =
	contextily
doc =
	ipykernel
	ipython
	ipython-genutils
	jupyter
	notebook
	sphinx
	sphinx_rtd_theme
	docutils
	nbsphinx
	jinja2
skmob =
	scikit-mobility
	pandas==1.2.5
	geopandas<0.11.0,>=0.10.2
locations =
	infostop


